cmake_minimum_required(VERSION 3.31)
project(week9_lab2)

set(CMAKE_CXX_STANDARD 20)

add_executable(week9_lab2 probem1.cpp
        problem2.cpp
        problem3.cpp
        problem4.cpp
        problem6.cpp
        problem7.cpp
        problem8.cpp
        problem9.cpp
        problem10.cpp
        problem11.cpp
        problem12.cpp)
